# ttk-text

./: .gitmodules  .markdownlint.json  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_zh.md  CONTRIBUTING.md  README.md  README.zh-CN.md  README_pypi.md  README_zh.md  example.py  pyproject.toml
.github/workflows/: lint.yml  publish.yml  release.yml  test.yml  testing.yml
src/ttk_text/: __init__.py  scrolled_text.py  utils.py
tests/: conftest.py  test_basic.py
tests/unit/: test_utils.py
